# soundclone

./: .env.dist  .eslintrc.cjs  .gitignore  README.md  docker-compose.yml  index.html  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.app.json
core/: admin.py  audio.py  models.py  serializers.py  signals.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_rename_album_playlist_alter_song_options_and_more.py  0002_song_waveform_version_waveform.py  0003_alter_song_playlist.py  0004_song_preview_file_version_preview_file.py
soundclone/: asgi.py  settings.py  urls.py  wsgi.py
src/: App.vue  main.ts
src/components/: AppButton.vue  AppModal.vue  AppNavigation.vue  AppSpinner.vue  AppSubtitle.vue  AppTitle.vue  AppWarning.vue  AudioPlayer.vue  DropZone.vue  FeedPlaylist.vue  FeedSong.vue  FilePreview.vue  FormDropZone.vue  FormFilePreview.vue  FormInput.vue  MainNavigation.vue  SongEditForm.vue  SongPlayer.vue
src/components/__tests__/: MainNavigation.spec.ts
src/compositions/: file-list.ts  playlist.ts
src/router/: index.ts
src/stores/: soundclone.ts
src/types/: file.ts
src/types/__tests__/: file.spec.ts
src/types/core/: index.ts
src/utils/: index.ts
src/views/: AboutView.vue  HomeView.vue  PlaylistsView.vue  SongView.vue  UploadView.vue
types/core/: index.ts
