[tool.poetry]
name = "soundclone"
version = "0.1.0"
description = ""
authors = ["Jean-Philippe Bidegain <jp@bidega.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
django-environ = "^0.10.0"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
